<resources>
    <string name="app_name">Lab 05</string>
    <string name="btn_reg">Register</string>
    <string name="btn_cancel">Cancel</string>
    <string name="edt_name">Name</string>
    <string name="edt_email">Email</string>
    <string name="edt_tel">Telephone</string>
    <string name="edt_password">Password</string>
    <string name="edt_password2">Re-type Password</string>
    <string name="channel_name">Channel</string>
    <string name="channel_description">Description</string>
</resources>