<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/edt_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edt_tel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <EditText
        android:id="@+id/edt_tel"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/edt_tel"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/edt_password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_tel" />

    <EditText
        android:id="@+id/edt_password2"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/edt_password2"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="139dp"
        android:backgroundTint="#C3C3C3"
        android:text="@string/btn_reg"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password2" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="97dp"
        android:backgroundTint="#C3C3C3"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reg" />

</androidx.constraintlayout.widget.ConstraintLayout>